--- a/Mobile App/Demo4.2/app/src/main/res/layout/dialog_info_modified.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/dialog_info_modified.xml
@@ -18,7 +18,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingHorizontal="@dimen/_20sdp">
+            android:paddingHorizontal="@dimen/_20sdp"
+            android:gravity="center"
+            >
 
             <ImageView
                 android:layout_width="@dimen/_60sdp"
@@ -28,7 +30,7 @@
 
             <TextView
                 android:id="@+id/tvName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="No data found"
                 android:fontFamily="@font/nunito_black"
