--- a/Mobile App/Demo4.2/app/src/main/res/layout/dialog_change_walking_speed.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/dialog_change_walking_speed.xml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@android:color/transparent"
+    android:padding="@dimen/_20sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <ImageView
-        android:layout_width="@dimen/_50sdp"
-        android:layout_height="@dimen/_50sdp"
-        android:src="@drawable/info_dialog"
-        android:translationZ="10dp"
-        android:layout_gravity="center_horizontal"
-
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
-
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -25,44 +14,54 @@
         android:visibility="visible"
         android:layout_marginTop="@dimen/_25sdp"
         app:cardCornerRadius="@dimen/_10sdp"
+        app:cardElevation="0dp"
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        >
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_25sdp">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tvName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:fontFamily="@font/nunito_black"
-                android:text="FPT University"
-                android:textColor="@android:color/black"
-                android:textSize="18sp"
 
+            <ImageView
+                android:id="@+id/img_get_type"
+                android:layout_width="@dimen/_60sdp"
+                android:layout_height="@dimen/_60sdp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="16dp"
+                android:src="@drawable/ic_adjust"
+                app:layout_constraintBottom_toTopOf="@+id/tvName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:fontFamily="@font/nunito_black"
+                android:text="FPT University"
+                android:textColor="@color/dark_blue"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/img_get_type" />
 
             <TextView
                 android:id="@+id/tvDes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_7sdp"
                 android:fontFamily="@font/nunito_light"
                 android:text="Current walking-speed: "
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
-
-
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvName" />
 
@@ -70,143 +69,140 @@
                 android:id="@+id/tvCurrentSpeed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:fontFamily="@font/nunito_bold"
                 android:text="4.892 (km/h)"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
-                android:fontFamily="@font/nunito_semi_bold"
 
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintTop_toBottomOf="@id/tvName"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tvDes"
-                />
+                app:layout_constraintTop_toTopOf="@+id/tvDes" />
 
             <LinearLayout
-                android:id="@+id/bgLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:id="@+id/setting_block"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="26dp"
                 android:orientation="horizontal"
-                android:layout_marginStart="@dimen/_20sdp"
-                android:gravity="right"
-
-                app:layout_constraintBottom_toBottomOf="@id/bgInput"
-                app:layout_constraintEnd_toStartOf="@+id/bgInput"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvDes">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="Gender"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    />
-
-
-
-                <Spinner
-                    android:id="@+id/snChooseSex"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/bgInput"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_50sdp"
-                android:orientation="horizontal"
-                android:layout_marginEnd="@dimen/_20sdp"
-
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_16sdp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/bgLabel"
-                app:layout_constraintTop_toTopOf="@id/bgLabel">
+                app:layout_constraintStart_toStartOf="@+id/tvName"
+                app:layout_constraintTop_toBottomOf="@+id/tvDes">
 
-                <TextView
+                <LinearLayout
+                    android:id="@+id/bgLabel"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="Age"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    />
+                    android:layout_height="@dimen/_36sdp"
+                    android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/edtAge"
-                    android:layout_width="@dimen/_50sdp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:inputType="number"
-                    android:text="18"
-                    android:textAlignment="center"
-                    />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/nunito_light_italic"
+                        android:gravity="center"
+                        android:text="Gender"
+                        android:textColor="@color/dark_blue"
+                        android:textSize="16sp" />
+
+                    <Spinner
+                        android:id="@+id/snChooseSex"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/bgInput"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_36sdp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/nunito_light_italic"
+                        android:gravity="center"
+                        android:text="Age"
+                        android:textColor="@color/dark_blue"
+                        android:textSize="16sp" />
+
+                    <EditText
+                        android:id="@+id/edtAge"
+                        android:layout_width="@dimen/_50sdp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:inputType="number"
+                        android:fontFamily="@font/nunito_bold"
+                        android:text="18"
+                        android:textAlignment="center" />
+                </LinearLayout>
+
             </LinearLayout>
+
 
             <TextView
                 android:id="@+id/tvNew"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:fontFamily="@font/nunito_light"
                 android:text="New walking-speed: "
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
-
-
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/bgInput" />
+                android:layout_marginTop="@dimen/_8sdp"
+                app:layout_constraintStart_toStartOf="@+id/setting_block"
+                app:layout_constraintTop_toBottomOf="@+id/setting_block" />
 
             <TextView
                 android:id="@+id/tvNewSpeed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:fontFamily="@font/nunito_bold"
                 android:text="4.892 (km/h)"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
-                android:fontFamily="@font/nunito_semi_bold"
 
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintTop_toBottomOf="@id/bgInput"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tvNew"
-                />
-
-            <TextView
-                android:id="@+id/tvDownload"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_20sdp"
-                android:fontFamily="@font/nunito_black"
-                android:text="Save"
-                android:textColor="@android:color/black"
-                android:textSize="18sp"
+                app:layout_constraintTop_toTopOf="@+id/tvNew" />
 
 
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/tvClose"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
-                android:id="@+id/tvClose"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_20sdp"
-                android:fontFamily="@font/nunito_black"
-                android:text="Close"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="18sp"
-
+            <LinearLayout
+                android:id="@+id/button_block"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintTop_toBottomOf="@id/tvNew" />
+                app:layout_constraintTop_toBottomOf="@+id/tvNewSpeed">
+
+                <Button
+                    android:id="@+id/bt_cancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/nunito_black"
+                    android:text="Cancel"
+                    android:textColor="@color/black_gray"
+                    android:textSize="13sp" />
+
+                <Button
+                    android:id="@+id/bt_save"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/nunito_black"
+                    android:text="Save"
+                    android:textColor="@color/dark_green"
+                    android:textSize="13sp" />
+
+            </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
