--- a/Mobile App/Demo4.2/app/src/main/res/layout/dialog_warning_download_modified.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/dialog_warning_download_modified.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="@dimen/_25sdp"
+    android:padding="@dimen/_20sdp"
     android:background="@android:color/transparent">
 
     <androidx.cardview.widget.CardView
@@ -14,73 +15,83 @@
         app:cardCornerRadius="@dimen/_8sdp"
         android:elevation="0dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingHorizontal="@dimen/_20sdp">
+            android:paddingHorizontal="@dimen/_17sdp">
 
             <ImageView
                 android:id="@+id/img_get_type"
                 android:layout_width="@dimen/_60sdp"
                 android:layout_height="@dimen/_60sdp"
-                android:src="@drawable/ic_download_dialog"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:layout_gravity="center"/>
+                android:src="@drawable/ic_download_dialog"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
 
             <TextView
                 android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="No data found"
                 android:fontFamily="@font/nunito_black"
+                android:text="No data found"
+                android:layout_marginTop="@dimen/_13sdp"
                 android:textColor="@color/dark_blue"
                 android:textSize="18sp"
-                android:layout_marginTop="@dimen/_14sdp" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_get_type" />
 
 
             <TextView
                 android:id="@+id/tvDes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="This building has no data to run. Please download to use the app"
-                android:textSize="15sp"
                 android:fontFamily="@font/nunito_light"
+                android:text="This building has no data to run. Please download to use the app"
                 android:textColor="@android:color/black"
-                android:layout_marginTop="@dimen/_5sdp"/>
+                android:textSize="15sp"
+                android:layout_marginTop="@dimen/_5sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tvName"
+                app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvDes"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:layout_gravity="end">
+                android:layout_marginBottom="@dimen/_14sdp">
 
                 <Button
                     android:id="@+id/bt_close"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Close"
+                    android:background="@android:color/transparent"
                     android:fontFamily="@font/nunito_black"
-                    android:textSize="13sp"
+                    android:text="Close"
                     android:textColor="@color/black_gray"
-                    android:background="@android:color/transparent"/>
+                    android:textSize="13sp" />
 
                 <Button
                     android:id="@+id/bt_download"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="download"
+                    android:background="@android:color/transparent"
                     android:fontFamily="@font/nunito_black"
-                    android:textSize="13sp"
+                    android:text="download"
                     android:textColor="@color/dark_green"
-                    android:background="@android:color/transparent"/>
+                    android:textSize="13sp" />
 
             </LinearLayout>
 
-        </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
