--- a/Mobile App/Demo4.2/app/src/main/res/layout/fragment_list_building_updated.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/fragment_list_building_updated.xml
@@ -48,7 +48,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:background="@null"
-                android:fontFamily="@font/nunito_extralight"
+                android:fontFamily="@font/nunito_light"
                 android:textColor="@color/dark_blue"
                 android:hint="Search building"
                 android:textSize="14sp"
