Android App: fix bug noti dialog

--- a/Mobile App/Demo4.2/app/src/main/res/layout/dialog_info_modified.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/dialog_info_modified.xml
@@ -59,7 +59,8 @@
                 android:textSize="13sp"
                 android:layout_gravity="end"
                 android:textColor="@color/dark_green"
-                android:background="@android:color/transparent"/>
+                android:background="@android:color/transparent"
+                />
 
         </LinearLayout>
 
