--- a/Mobile App/Demo4.2/app/src/main/res/layout/fragment_map_info_bottom_sheet_modified.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/fragment_map_info_bottom_sheet_modified.xml
@@ -47,6 +47,7 @@
                 android:text="m"
                 android:textColor="@color/dark_green"
                 android:textSize="13sp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_distance"
                 app:layout_constraintStart_toEndOf="@+id/tv_distance" />
 
@@ -92,6 +93,7 @@
                 android:text="sec"
                 android:textColor="@color/black_gray"
                 android:textSize="13sp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_time"
                 app:layout_constraintStart_toEndOf="@+id/tv_time" />
 
