--- a/Web Admin/Capstone_Web/src/main/resources/static/css/point.css
+++ b/Web Admin/Capstone_Web/src/main/resources/static/css/point.css
@@ -1,3 +1,7 @@
+body {
+	overflow: hidden;
+}
+
 #imgMap {
 	max-height: 99vh;
 	max-width: 70vw;
@@ -98,5 +102,10 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
 
 .success {
 	color: green;
+	text-decoration: underline;
+}
+
+.failed {
+	color: red;
 	text-decoration: underline;
 }
