--- a/Mobile App/Demo4.2/app/src/main/res/drawable/border.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/drawable/border.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <corners android:radius="@dimen/_3sdp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="@dimen/_5sdp"/>
     <padding android:left="2dp" android:right="2dp" android:top="2dp" android:bottom="2dp"/>
     <stroke android:width="1dp" android:color="@color/bgMap"/>
+
 
 </shape>
