--- a/Mobile App/Demo4.2/app/src/main/res/values/colors.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="bgBuilding">#F4A709</color>
     <color name="line_color">#F78B03</color>
     <color name="color_text_delete">#D95F50</color>
+    <color name="color_space">#D5D5D5</color>
 
 
     <color name="white">#FFFFFF</color>
