--- a/Mobile App/Demo4.2/app/src/main/res/layout/activity_test.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/activity_test.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/fragment"
-        class="fpt.capstone.inqr.fragment.ChooseLocationFragment"
+        class="fpt.capstone.inqr.fragment.ChooseDestinationFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
