Revert "Android App: Update AR - Add 3D Text to show distance left"
This reverts commit 4e86c1e7c377b18973a754d6382b50c1559f0138.

--- a/Mobile App/Demo4.2/app/src/main/res/layout/fragment_map_modified.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/fragment_map_modified.xml
@@ -377,7 +377,7 @@
         <RelativeLayout
             android:id="@+id/map_footer_section"
             android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
+            android:layout_height="wrap_content"
             android:background="@color/light_gray_input"
             android:padding="@dimen/_7sdp"
             android:visibility="gone">
